--- a/index.html
+++ b/index.html
@@ -1,69 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-34691728-1"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'UA-34691728-1', {'anonymize_ip': true});
-        </script>
-
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-
-        <title>briangarland.dev - My take on things...</title>
-
-        <link rel="shortcut icon" href="assets/images/Brian_Garland.jpg">
-
-        <!-- Styles -->
-        <link rel="stylesheet" href="assets/css/styles.css?v2">
-
-        <!-- JS -->
-        <!-- config -->
-        <script src="assets/js/config.js"></script>
-
-        <!-- utils -->
-        <script src="assets/js/utils/utils.js?v2"></script>
-        <script src="assets/js/utils/showdown.min.js"></script>
- 
-        <!-- init -->
-        <script src="assets/js/init.js?v2"></script>
-
-        <!-- templates -->
-        <script src="assets/js/templates/hello.js"></script>
-        <script src="assets/js/templates/posts.js"></script>
-        <script src="assets/js/templates/loader.js"></script>
-
-        <!-- controllers -->
-        <script src="assets/js/controllers/post.js?v2"></script>
-        <script src="assets/js/controllers/home.js?v2"></script>
-
-        <!-- views -->
-        <script src="assets/js/views/home.js?v1"></script>
-        <script src="assets/js/views/post.js?v1"></script>
-        <script src="assets/js/views/all_posts.js?v1"></script>
 
     </head>
     <body>
-        <div class="container">
-            <div id="page-content" class="main-content"></div>
-            <div id="footer" class="footer">
-                <a href="#home">Home</a>
-                <a href="#post?About-Me">About Me</a>
-                <a href="Brian_Garland_Resume.html" target="_BLANK">Resume</a>
-                <a href="#all_posts">All Posts</a>
-                <p>
-                    &copy; Brian Garland
-                </p>
-                <div class="footer-icons">
-                    <a href="https://github.com/briangarland" target="_BLANK"><img src="assets/images/github.png"></a>
-                    <a href="https://www.linkedin.com/in/brian-garland-2a189916" target="_BLANK"><img src="assets/images/linkedin.png"></a>
-                    <a href="https://twitter.com/BrianJGarland" target="_BLANK"><img src="assets/images/twitter.png"></a>
-                </div>
-            </div>
-        </div>
+        Hello World!
     </body>
 </html>
