--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Hello, I'm Brian!</div>
+		<div class="intro">Hello, I'm Brian Garland!</div>
 		<div class="tagline">Developer | IBM i Fan</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
