--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 			<!-- <a target="_blank" href="https://www.freecodecamp.org"><i class="fab fa-free-code-camp"></i></a> -->
 			<!-- <a target="_blank" href="https://www.behance.net"><i class="fab fa-behance"></i></a> -->
 			<!-- <a target="_blank" href="https://codepen.io"><i class="fab fa-codepen"></i></a> -->
-    </div>
+    		</div>
+		<br />
+		<div class="custombutton"><a href="about.html" class="button">about me</a></div>
+		<div class="custombutton"><a href="blog.html" class="button">blog</a></div>
 	</main>
 </body>
 </html>
