--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<a target="_blank" href="https://www.linkedin.com/in/brian-garland-2a189916"><i class="fab fa-linkedin"></i></a>
 			<br />
 			<a target="_blank" href="about.html"><i class="fab fa-address-card"></i></a>
-			<a target="_blank" href="blog.html"><i class="fab fa-blogv"></i></a>
+			<a target="_blank" href="blog.html"><i class="fab fa-blog"></i></a>
     		</div>
 	</main>
 </body>
