--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 			<a target="_blank" href="https://dev.to/brianjgarland"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/brian-garland-2a189916"><i class="fab fa-linkedin"></i></a>
 			<br />
-			<a target="_blank" href="about.html"><i class="fab fa-address-card"></i></a>
-			<a target="_blank" href="blog.html"><i class="fab fa-blog"></i></a>
+			<a target="_blank" href="blog.html"><i class="fas fa-blog"></i></a>
+			<a target="_blank" href="about.html"><i class="far fa-address-card"></i></a>
     		</div>
 	</main>
 </body>
