--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<a target="_blank" href="https://dev.to/brianjgarland"><i class="fab fa-dev"></i></a>
 			<a target="_blank" href="https://www.linkedin.com/in/brian-garland-2a189916"><i class="fab fa-linkedin"></i></a>
 			<br />
-			<a href="blog.html"><i class="fas fa-rss-square"></i>/a>
+			<a href="blog.html"><i class="fas fa-rss-square"></i></a>
 			<a href="about.html"><i class="far fa-address-card"></i></a>
     		</div>
 	</main>
