cleanup about page

--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
 
         <link rel="shortcut icon" href="favicon.ico">
         
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/styles.css">
-
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/about_styles.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
     </head>
     <body class="resume">
         <div class="container">
@@ -45,7 +45,11 @@
                                 </tr>
                                 <tr>
                                     <td valign="middle"><i class="fa fa-linkedin"></i></td>
-                                    <td valign="middle"><a href="https://in.linkedin.com/in/brian-garland-2a189916">linkedin.com/in/vbrian-garland-2a189916</a></td>
+                                    <td valign="middle"><a href="https://in.linkedin.com/in/brian-garland-2a189916">linkedin.com/in/brian-garland-2a189916</a></td>
+                                </tr>
+                                <tr>
+                                    <td valign="middle"><i class="fa fa-twitter"></i></td>
+                                    <td valign="middle"><a href="https://twitter.com/brianjgarland">twitter.com/brianjgarland</a></td>
                                 </tr>
                             </table>
                         </div>
