--- a/index.html
+++ b/index.html
@@ -15,20 +15,13 @@
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/styles.css">
 	
-	<!--  <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
 	<link rel="stylesheet" href="css/themes/grey-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
-	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
+ 
 </head>
 <body>
 	<main>
 		<div class="intro">Hello, I'm Brian Garland!</div>
-		<div class="tagline">Developer | IBM i Fan</div>
+		<div class="tagline">Developer &AMP; IBM i Fan</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/BrianGarland"><i class="fab fa-github"></i></a>
@@ -38,7 +31,7 @@
 			<br /><br />
 			<a href="about.html"><i class="far fa-address-card"></i></a>
 			<a href="blog.html"><i class="fas fa-rss"></i></a>
-    		</div>
+    	</div>
 	</main>
 </body>
 </html>
