--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,11 @@
 </head>
 <body>
 	<main>
-		<div class="intro">Under Construction</div>
+		<div class="intro">
+			Under Construction
+		</div>
+        <div id="posts" class="col-lg-8 col-md-10 mx-auto">
+        </div>
 	</main>
 </body>
 </html>
