--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,8 @@
         
 	</main>
 	
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
+    <script src="js/clean-blog.min.js"></script>
 	<script src="js/bloghome.js"></script>
 	
 </body>
