--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,11 @@
         
 	</main>
 	
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Custom scripts for this template -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
     <script src="js/clean-blog.min.js"></script>
 	<script src="js/bloghome.js"></script>
