--- a/blogpost.html
+++ b/blogpost.html
@@ -18,8 +18,8 @@
 	<!--  <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<link rel="stylesheet" href="css/themes/grey-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
+	<link rel="stylesheet" href="css/themes/white-indigo.css">
 	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
@@ -32,7 +32,10 @@
 			Under Construction
 		</div>
 		
-        <div id="posts" class="col-lg-8 col-md-10 mx-auto">
+        <div id="article" class="col-lg-8 col-md-10 mx-auto">
+        </div>
+        
+        <div id="comments" class="col-lg-8 col-md-10 mx-auto">
         </div>
         
 	</main>
@@ -44,7 +47,7 @@
     <!-- Custom scripts for this template -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
     <script src="js/clean-blog.min.js"></script>
-	<script src="js/bloghome.js"></script>
+	<script src="js/blogpost.js"></script>
 	
 </body>
 </html>
