--- a/blog.html
+++ b/blog.html
@@ -18,8 +18,8 @@
 	<!--  <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
-	<link rel="stylesheet" href="css/themes/grey-white.css">
-	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
+	<link rel="stylesheet" href="css/themes/white-indigo.css">
 	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
@@ -29,7 +29,7 @@
 	<main>
 	
 		<div class="intro">
-			Under Construction
+			Here is a list of my blog posts.
 		</div>
 		
         <div id="posts" class="col-lg-8 col-md-10 mx-auto">
