--- a/blogpost.html
+++ b/blogpost.html
@@ -27,12 +27,10 @@
 </head>
 <body>
 	<main>
-	
-		<div class="intro">
-			Under Construction
-		</div>
-		
-        <div id="article" class="col-lg-8 col-md-10 mx-auto">
+
+		<h1 id="title"></h1>
+
+		<div id="article" class="col-lg-8 col-md-10 mx-auto">
         </div>
         
         <div id="comments" class="col-lg-8 col-md-10 mx-auto">
