--- a/blogpost.html
+++ b/blogpost.html
@@ -30,6 +30,11 @@
 
 		<h1 id="title"></h1>
 
+		<div class="meta">Posted by
+			<a id="author" href="#">User</a>
+   			on <span id="posttime"></span>
+		</div>
+		
 		<div id="article" class="col-lg-8 col-md-10 mx-auto">
         </div>
         
