--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,10 @@
 			Here is a list of my blog posts.
 		</div>
 		
+		<div class="tagline">
+			&nbsp;
+		</div>
+		
         <div id="posts" class="col-lg-8 col-md-10 mx-auto">
         </div>
         
