--- a/blogpost.html
+++ b/blogpost.html
@@ -12,8 +12,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
+    <link href="css/clean-blog.css" rel="stylesheet">
 	
 	<!--  <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
 	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
@@ -34,7 +33,7 @@
 			<a id="author" href="#">User</a>
    			on <span id="posttime"></span>
 		</div>
-		
+
 		<div id="article" class="col-lg-8 col-md-10 mx-auto">
         </div>
         
