--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
     <link href="css/clean-blog.css" rel="stylesheet">
 	
 	<!--  <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
