--- a/blogpost.html
+++ b/blogpost.html
@@ -29,7 +29,8 @@
 <body>
 	<main>
 
-		<h1 id="title"></h1>
+		<div id="title" class="intro">
+		</div> 
 
 		<div class="meta">Posted by
 			<a id="author" href="#">User</a>
