--- a/blogpost.html
+++ b/blogpost.html
@@ -39,12 +39,28 @@
 
 	</main>
 	
-	<div id="article" class="col-lg-8 col-md-10 mx-auto">
-    </div>
-        
-    <div id="comments" class="col-lg-8 col-md-10 mx-auto">
-    </div>
-        
+	<article>
+    	<div class="container">
+      		<div class="row">
+        		<div id="article" class="col-lg-8 col-md-10 mx-auto">
+        		</div>
+      		</div>
+    	</div>
+	</article>
+
+  <hr>
+
+	<div class="container">
+    	<div class="row">
+      		<div id="comments" class="col-lg-8 col-md-10 mx-auto">
+	      	</div>
+    	</div>
+  	</div>
+	
+	<hr>
+	
+	<p class="copyright text-muted">Brian Garland, 2019</p>
+	
 	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
