--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,8 @@
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	
