--- a/blogpost.html
+++ b/blogpost.html
@@ -29,7 +29,7 @@
 	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
 </head>
 <body>
-	<post>
+	<header class="masthead">
 
 		<div id="title" class="intro">
 		</div> 
@@ -39,7 +39,7 @@
    			on <span id="posttime"></span>
 		</div>
 
-	</post>
+	</header>
 	
 	<article>
     	<div class="container">
