--- a/blogpost.html
+++ b/blogpost.html
@@ -14,8 +14,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
 	<link href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" rel="stylesheet">
 	
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/styles.css">
     <link href="css/clean-blog.css" rel="stylesheet">
 	
 	<!--  <link rel="stylesheet" href="css/themes/indigo-white.css"> -->
@@ -31,8 +29,7 @@
 <body>
 	<header class="masthead">
 
-		<div id="title" class="intro">
-		</div> 
+		<h1 id="title"></h1>
 
 		<div class="meta">Posted by
 			<a id="author" href="#">User</a>
@@ -41,6 +38,8 @@
 
 	</header>
 	
+  	<hr>
+  	
 	<article>
     	<div class="container">
       		<div class="row">
@@ -50,7 +49,7 @@
     	</div>
 	</article>
 
-  <hr>
+  	<hr>
 
 	<div class="container">
     	<div class="row">
