--- a/blogpost.html
+++ b/blogpost.html
@@ -68,7 +68,7 @@
 	
 	<hr>
 	
-	<p class="copyright text-muted">@copy; Brian Garland, 2019</p>
+	<p class="copyright text-muted">&copy; Brian Garland, 2019</p>
 	
 	
     <!-- Bootstrap core JavaScript -->
