--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
                     </div>
                     <div id="resume-details-left-2" class="resume-details-col">
                         <b>About</b>
-                        <p>I'm a skilled IBM i developer with broad experience on IBM i (In both ILE languages and Db2 for i).</p>
+                        <p>I'm a skilled IBM i application engineer with broad experience on IBM i (In both ILE languages and Db2 for i).</p>
                     </div>
                     <div id="resume-details-left-5" class="resume-details-col">
                         <b>Open Source Projects</b>
@@ -85,18 +85,18 @@
                     <div id="resume-details-right-2" class="resume-details-col">
                         <div class="resume-section-heading">Experience</div>
                         <div class="resume-details-col">
-                            <div class="resume-job-title">Developer - <a href="http://www.vtinfo.com" target="_BLANK">Vermont Information Processing</a></div>
+                            <div class="resume-job-title">Application Engineer - <a href="http://www.vtinfo.com" target="_BLANK">Vermont Information Processing</a></div>
                             May 1995 - Present
                             <ul>
                                 <li>Various development responsibilities from bug fixes to database design to application architecture for VIP's Beverage System.</li>
                             </ul>
                         </div>
                         <div class="resume-details-col">
-                            <div class="resume-job-title">Operator &amp; Developer - Independent Food Company</div>
+                            <div class="resume-job-title">Operator &amp; Software Developer - Independent Food Company</div>
                             May 1984 - May 1995
                             <ul>
                                 <li>Started out as a operator on the night shift while attending college.</li>
-                                <li>Moved up the ranks to developer and then manager of the IT department.</li>
+                                <li>Moved up the ranks to software developer and then manager of the IT department.</li>
                             </ul>
                         </div>
                     </div>
