--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                            <img src="images/Brian_Garland_high_res.jpg" width="150"> 
                         </div>
                         <div class="resume-name">Brian Garland</div>
-                        <div class="resume-title">IBM i Applicatino Engineer</div>
+                        <div class="resume-title">IBM i Application Engineer</div>
                     </div>
                     <div id="resume-details-left-1" class="resume-details-col">
                         <div class="table-responsive">
