--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
 	<main>
 		<div class="intro">Hello, I'm Brian Garland!</div>
-		<div class="tagline">Developer &AMP; IBM i Fan</div>
+		<div class="tagline">Software Developer &AMP; IBM i Fan</div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 		<div class="icons-social">
 			<a target="_blank" href="https://github.com/BrianGarland"><i class="fab fa-github"></i></a>
