--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,8 @@
         
 	</main>
 	
+ 	<p class="copyright text-muted">Brian J. Garland, 2020</p>
+ 	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
