--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
         
 	</main>
 	
- 	<p class="copyright text-muted">Brian J. Garland, 2020</p>
+	<p class="copyright text-muted">&copy; Brian J. Garland, 2020</p>
  	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
