--- a/blogpost.html
+++ b/blogpost.html
@@ -68,8 +68,9 @@
 	
 	<hr>
 	
-	<p class="copyright text-muted">&copy; Brian J. Garland, 2020</p>
-	
+	<footer>
+		<p class="copyright text-muted">&copy; Brian J. Garland, 2020</p>
+	</footer>
 	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
