--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,9 @@
         
 	</main>
 	
-	<p class="copyright text-muted">&copy; Brian J. Garland, 2020</p>
+	<footer>
+		<p class="copyright text-muted">&copy; Brian J. Garland, 2020</p>
+	</footer>
  	
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
