--- a/about.html
+++ b/about.html
@@ -1,111 +1,151 @@
-<html>
-    <head>
-     <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+<!DOCTYPE html>
+<html lang="en">
 
-        <title>My Resume - Brian Garland - briangarland.dev</title>
+<head>
 
-        <link rel="shortcut icon" href="favicon.ico">
-        
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/about_styles.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-    </head>
-    <body class="resume">
-        <div class="container">
-            <div id="row">
-                <div id="resume-left-col" class="col-sm-4 col-xs-12">
-                    <div class="center-text">
-                        <div class="resume-photo">
-                           <img src="images/Brian_Garland_high_res.jpg" width="150"> 
-                        </div>
-                        <div class="resume-name">Brian Garland</div>
-                        <div class="resume-title">IBM i Application Engineer</div>
-                    </div>
-                    <div id="resume-details-left-1" class="resume-details-col">
-                        <div class="table-responsive">
-                            <table class="table">
-                                <tr>
-                                    <td valign="middle"><i class="fa fa-map-marker"></i></td>
-                                    <td valign="middle">Colchester, VT, U.S.A.</td>
-                                </tr>
-                               
-                                <tr>
-                                    <td valign="middle"><i class="fa fa-envelope"></i></td>
-                                    <td valign="middle">bjgarland@gmail.com</td>
-                                </tr>
-                                <tr>
-                                    <td valign="middle"><i class="fa fa-rss"></i></td>
-                                    <td valign="middle"><a href="https://briangarland.dev">briangarland.dev</a></td>
-                                </tr>
-                                <tr>
-                                    <td valign="middle"><i class="fa fa-github"></i></td>
-                                    <td valign="middle"><a href="https://github.com/briangarland">github.com/briangarland</a></td>
-                                </tr>
-                                <tr>
-                                    <td valign="middle"><i class="fa fa-linkedin"></i></td>
-                                    <td valign="middle"><a href="https://in.linkedin.com/in/brian-garland-2a189916">linkedin.com/in/brian-garland-2a189916</a></td>
-                                </tr>
-                                <tr>
-                                    <td valign="middle"><i class="fa fa-twitter"></i></td>
-                                    <td valign="middle"><a href="https://twitter.com/brianjgarland">twitter.com/brianjgarland</a></td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                    <div id="resume-details-left-2" class="resume-details-col">
-                        <b>About</b>
-                        <p>I'm a skilled IBM i application engineer with broad experience on IBM i (In both ILE languages and Db2 for i).</p>
-                    </div>
-                    <div id="resume-details-left-5" class="resume-details-col">
-                        <b>Open Source Projects</b>
-                        <ul>
-                            <li><a href="https://github.com/BrianGarland/CRTFRMSTMF">CRTFRMSTMF</a></li>
-                            <li><a href="https://github.com/BrianGarland/CHGOBJATTR">CHGOBJATTR</a></li>
-                            <li><a href="https://github.com/BrianGarland/RPG-Properties">RPG-Properties</a></li>
-                        </ul>
-                    </div>
-                    <div id="resume-details-left-6" class="resume-details-col">
-                        <b>Interests</b>
-                        <p>Reading, Hiking</p>
-                    </div>
-                    <span class="hidden-xs"><br><br><br><br><br><br><br><br></span>
-                </div>
-                <div id="resume-right-col" class="col-sm-8 col-xs-12">
-                    <div id="resume-details-right-1" class="resume-details-col">
-                        <div class="resume-section-heading">Skills</div>
-                        <div class="resume-details-col">
-                            <b>Tools</b>: RPGLE, CLLE, DDS, SQL, RDi, MDCMS, Java, Git
-                        </div>
-                        <div class="resume-details-col">
-                            <b>Techniques</b>: ILE, Service Programs, Stored Procedures, Data Modeling
-                        </div>
-                    </div>
-                    <div id="resume-details-right-2" class="resume-details-col">
-                        <div class="resume-section-heading">Experience</div>
-                        <div class="resume-details-col">
-                            <div class="resume-job-title">Application Engineer - <a href="http://www.vtinfo.com" target="_BLANK">Vermont Information Processing</a></div>
-                            May 1995 - Present
-                            <ul>
-                                <li>Various development responsibilities from bug fixes to database design to application architecture for VIP's Beverage System.</li>
-                            </ul>
-                        </div>
-                        <div class="resume-details-col">
-                            <div class="resume-job-title">Operator &amp; Software Developer - Independent Food Company</div>
-                            May 1984 - May 1995
-                            <ul>
-                                <li>Started out as a operator on the night shift while attending college.</li>
-                                <li>Moved up the ranks to software developer and then manager of the IT department.</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <br><br>
-                </div>
-            </div>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <title>Brian Garland's Blog</title>
+
+  <link rel="icon" href="img/favicon.ico" type="image/png" />
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+  <!-- Custom styles for this template -->
+  <link href="css/clean-blog.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand" href="index.html">Brian Garland's Blog</a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Header -->
+  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <div class="page-heading">
+            <h1>Brian Garland</h1>
+            <span class="subheading">IBM i Application Engineer</span>
+          </div>
         </div>
+      </div>
+    </div>
+  </header>
 
-        <script src="assets/js/utils/jquery.js"></script>
-        <script src="assets/js/utils/bootstrap.min.js"></script>
-    </body>
+  <!-- Main Content -->
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 col-md-10 mx-auto">
+        <h2 class="section-heading">About me</h2>
+        <p>I'm a skilled IBM i application engineer with broad experience on IBM i in both ILE languages and Db2 for i.</p>
+        <h2 class="section-heading">Skills</h2>
+        <p><b>Tools:</b> RPGLE, CLLE, DDS, SQL, RDi, MDCMS, Java, Git</p>
+        <p><b>Techniques:</b> ILE, Service Programs, Stored Procedures, Data Modeling</p>
+        <h2 class="section-heading">Experience</h2>
+        <p><b>Application Engineer - <a href="https://www.vtinfo.com">Vermont Information Processing</a></b></p>
+        <p>May 1995 - Present</p>
+        <p>I have had various development resposibilities from bug fixes to database design to application architecture for VIP's Beverage System.</p>
+        <p><b>Operator and Programmer - Independent Food Company</b></p>
+        <p>May 1984 - May 1995</p>
+        <p>I started out as the night shift operator running reports and doing the backup while attending college.  Over time I moved up the ranks to programmer and then manager of the IT department.</p>
+        <h2 class="section-heading">Open Source Projects</h2>
+        <p><a href="https://github.com/BrianGarland/CRTFRMSTMF">CRTFRMSTMF - Create IBM i objects from stream file source</a></p>
+        <p><a href="https://github.com/BrianGarland/CHGOBJATR">CHGOBJATTR - IBM i command to change an Objects Attributes</a></p>
+        <p><a href="https://github.com/BrianGarland/RPG-Properties">RPG-Properties - RPGLE service program for reading a .properties file</a></p>
+        <h2 class="section-heading">Interests</h2>
+        <p>Reading and Backpacking</p>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <!-- Footer -->
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+          <ul class="list-inline text-center">
+            <li class="list-inline-item">
+              <a href="https://github.com/BrianGarland">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://twitter.com/brianjgarland">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://dev.to/brianjgarland">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-dev fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.linkedin.com/in/brian-garland-2a189916">
+                <span class="fa-stack fa-lg">
+                  <i class="fas fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
+          <p class="copyright text-muted">Copyright &copy; Brian J. Garland 2020</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/clean-blog.min.js"></script>
+
+</body>
+
 </html>
