--- a/about.html
+++ b/about.html
@@ -83,6 +83,7 @@
         <p><a href="https://github.com/BrianGarland/CRTFRMSTMF">CRTFRMSTMF - Create IBM i objects from stream file source</a></p>
         <p><a href="https://github.com/BrianGarland/CHGOBJATR">CHGOBJATTR - IBM i command to change an Objects Attributes</a></p>
         <p><a href="https://github.com/BrianGarland/RPG-Properties">RPG-Properties - RPGLE service program for reading a .properties file</a></p>
+        <p><a href="https://github.com/BrianGarland/Minesweeper4i">Minesweeper4i - A traditional minesweeper game for IBM i</a></p>
         <h2 class="section-heading">Interests</h2>
         <p>Reading and Backpacking</p>
       </div>
