--- a/post.html
+++ b/post.html
@@ -130,7 +130,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Brian J. Garland 2020</p>
+          <p class="copyright text-muted">Copyright &copy; 2020 - <script>document.write(new Date().getFullYear())</script> Brian J. Garland</p>
         </div>
       </div>
     </div>
