--- a/about.html
+++ b/about.html
@@ -75,10 +75,10 @@
         <h2 class="section-heading">Experience</h2>
         <p><b>Application Engineer - <a href="https://www.vtinfo.com">Vermont Information Processing</a></b></p>
         <p>May 1995 - Present</p>
-        <p>Vermont Information Processing is a major ISV in the beverage distribution industry.  I have had various development responsibilities from bug fixes to database design to application architecture for VIP's Beverage System (a large route accounting package).  As a senior developer I now focus on the larger projects, database design, and education of other developers.</p>
+        <p>Vermont Information Processing is a major ISV in the beverage distribution industry.  I have had various development responsibilities from bug fixes to database design to application architecture for VIP's Beverage System (a large route accounting system).  As a senior developer I now focus on the larger projects, database design, and education of other developers.</p>
         <p><b>Operator and Programmer - Independent Food Company</b></p>
         <p>May 1984 - May 1995</p>
-        <p>I started out as the night shift operator running reports and doing the backup while attending college.  Over time I moved up the ranks to programmer and then manager of the IT department.  IFC was a wholesale food distributor with a home grown Route Accounting System.  I worked with the System/34, System/36, and AS/400 systems over this time. </p>
+        <p>I started out as the night shift operator running reports and doing the backup while attending college.  Over time I moved up the ranks to programmer and then manager of the IT department.  IFC was a wholesale food distributor with a home grown route accounting system.  I worked with the System/34, System/36, and AS/400 systems over this time. </p>
         <h2 class="section-heading">Education</h2>
         <p>University of Vermont (computer science and engineering courses) 1983 to 1985</p>
         <p>Champlain College (computing and accounting courses) 1985 to 1986</p>
