--- a/about.html
+++ b/about.html
@@ -68,9 +68,9 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <h2 class="section-heading">About me</h2>
-        <p>I'm a skilled IBM i application engineer with broad experience on IBM i in both ILE languages and Db2 for i.</p>
+        <p>I'm a skilled IBM i application engineer with broad experience on IBM i with ILE languages and Db2 for i.</p>
         <h2 class="section-heading">Skills</h2>
-        <p><b>Tools:</b> RPGLE, CLLE, DDS, SQL, RDi, MDCMS, Java, Git</p>
+        <p><b>Tools:</b> RPGLE, CLLE, DDS, SQL, RDi, VS Code, MDCMS, Java, Git</p>
         <p><b>Techniques:</b> ILE, Service Programs, Stored Procedures, Data Modeling</p>
         <h2 class="section-heading">Experience</h2>
         <p><b>Application Engineer - <a href="https://www.vtinfo.com">Vermont Information Processing</a></b></p>
