--- a/about.html
+++ b/about.html
@@ -84,6 +84,7 @@
         <p>Champlain College (computing and accounting courses) 1985 to 1986</p>
         <p>I did not complete a degree program</p> 
         <h2 class="section-heading">Open Source Projects</h2>
+        <p><a href="https://github.com/BrianGarland/vscode-rpgfree">RPG free for Visual Studio Code</a></p>
         <p><a href="https://github.com/BrianGarland/CRTFRMSTMF">CRTFRMSTMF - Create IBM i objects from stream file source</a></p>
         <p><a href="https://github.com/BrianGarland/CHGOBJATTR">CHGOBJATTR - IBM i command to change an Objects Attributes</a></p>
         <p><a href="https://github.com/BrianGarland/RPG-Properties">RPG-Properties - RPGLE service program for reading a .properties file</a></p>
