--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="links.html">Links</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
         </ul>
