--- a/links.html
+++ b/links.html
@@ -65,6 +65,8 @@
    
     <li><a href="https://www.trueclassictees.com/blogs/news/outfits-for-big-guys-how-to-dress-as-an-overweight-man?srsltid=AfmBOoqCTLhiLCtnGebHHh-PnQEWb2Qtq7bkoYEu1wvw8tCY4t4PP4en">Clothing styles</a></li>
 
+    <li><a href="https://www.epicfits.com/blogs/news/outfits-for-big-guys-how-to-dress-as-an-overweight-man?srsltid=AfmBOoo56RCTb_fshJmoiQjyWtF_Hjm_0p0z4XQU2YiigpIIKigagxal">Clothing styles *</a></li>
+    
   </ul>  
   </body>  
 </html>
