--- a/links.html
+++ b/links.html
@@ -59,7 +59,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
             <h1>Brian Garland</h1>
-            <span class="subheading">IBM i Application Engineer</span>
+            <span class="subheading">Some interesting links that I have collected</span>
           </div>
         </div>
       </div>
